# animated-tribble

app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/bmstu_project/: FirstPart.java  FourthPart.java  MainActivity.java  PinpadActivity.java  ThirdPart.java  TransactionEvents.java
app/src/main/res/layout/: activity_fourth_part.xml  activity_main.xml  activity_pinpad.xml  activity_third_part.xml
app/src/main/res/values/: themes.xml
backend/: pom.xml
backend/backend/: pom.xml
backend/backend/src/main/java/com/example/BMSTU_SD/backend/auth/: AuthenticationFilter.java  AuthenticationProvider.java  JwtDsl.java  SecurityConfiguration.java
backend/backend/src/main/java/com/example/BMSTU_SD/backend/controllers/: ArtistsController.java  CountryController.java  LoginController.java  MuseumController.java  UserController.java
backend/backend/src/main/java/com/example/backend/auth/: AuthenticationFilter.java  AuthenticationProvider.java  JwtDsl.java  SecurityConfiguration.java
backend/backend/src/main/java/com/example/backend/controllers/: CountryController.java  MuseumController.java  SampleController.java  UserController.java
backend/backend/src/main/java/com/example/backend/models/: Country.java  Museum.java  Painting.java  User.java
backend/backend/src/main/java/com/example/backend/repositories/: ArtistRepository.java  CountryRepository.java  MuseumRepository.java  UserRepository.java
backend/backend/src/main/java/com/example/backend/tools/: Utils.java
backend/backend/src/main/resources/: application.properties
backend/src/main/java/com/example/BMSTU_SD/backend/controllers/: CountryController.java  SampleController.java
backend/src/main/java/com/example/BMSTU_SD/backend/models/: Country.java
backend/src/main/java/com/example/BMSTU_SD/backend/repositories/: UserRepository.java
backend/src/main/resources/: application.properties
fclient/app/: build.gradle
fclient/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
fclient/gradle/wrapper/: gradle-wrapper.properties
front/src/: App.js
front/src/components/: NavigationBar.jsx
(+4 files in other folders)
